antlr4/schema_language/schemaParser.cpp

// Generated from antlr4/schema_language/schema.g4 by ANTLR 4.11.1


#include "schemaListener.h"
#include "schemaVisitor.h"

#include "schemaParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SchemaParserStaticData final {
  SchemaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SchemaParserStaticData(const SchemaParserStaticData&) = delete;
  SchemaParserStaticData(SchemaParserStaticData&&) = delete;
  SchemaParserStaticData& operator=(const SchemaParserStaticData&) = delete;
  SchemaParserStaticData& operator=(SchemaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag schemaParserOnceFlag;
SchemaParserStaticData *schemaParserStaticData = nullptr;

void schemaParserInitialize() {
  assert(schemaParserStaticData == nullptr);
  auto staticData = std::make_unique<SchemaParserStaticData>(
    std::vector<std::string>{
      "language", "type", "entity_declaration", "local_entity_declaration", 
      "field", "name_declar", "file", "csv"
    },
    std::vector<std::string>{
      "", "'\\u03C3'", "'\\U0001D70F'", "'\\u03C0'", "'+'", "'FROM'", "'FILE'", 
      "'CSV'", "'XML'", "'JSON'", "'LJSON'", "'HEADER'", "'SEP'", "'String'", 
      "'UInt'", "'Int'", "'Double'", "'('", "')'", "'['", "']'", "','", 
      "':>'", "", "'.'", "'='", "'::'", "':'", "'*'"
    },
    std::vector<std::string>{
      "", "SCORE", "TAG", "PROPERTY", "MULTI", "FROM", "FILE", "CSV", "XML", 
      "JSON", "LJSON", "WITH_HEADER", "SEP", "String", "UInt", "Int", "Double", 
      "LPAR", "RPAR", "LCOLL", "RCOLL", "COMMA", "MAP", "COMMENT", "DOT", 
      "EQ", "TYPE_SEP", "OFTYPE", "STAR", "LINE_COMMENT", "WS", "EscapedString", 
      "WORD"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  schemaParserStaticData = staticData.release();
}

}

schemaParser::schemaParser(TokenStream *input) : schemaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

schemaParser::schemaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  schemaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *schemaParserStaticData->atn, schemaParserStaticData->decisionToDFA, schemaParserStaticData->sharedContextCache, options);
}

schemaParser::~schemaParser() {
  delete _interpreter;
}

const atn::ATN& schemaParser::getATN() const {
  return *schemaParserStaticData->atn;
}

std::string schemaParser::getGrammarFileName() const {
  return "schema.g4";
}

const std::vector<std::string>& schemaParser::getRuleNames() const {
  return schemaParserStaticData->ruleNames;
}

const dfa::Vocabulary& schemaParser::getVocabulary() const {
  return schemaParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView schemaParser::getSerializedATN() const {
  return schemaParserStaticData->serializedATN;
}


//----------------- LanguageContext ------------------------------------------------------------------

schemaParser::LanguageContext::LanguageContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<schemaParser::Entity_declarationContext *> schemaParser::LanguageContext::entity_declaration() {
  return getRuleContexts<schemaParser::Entity_declarationContext>();
}

schemaParser::Entity_declarationContext* schemaParser::LanguageContext::entity_declaration(size_t i) {
  return getRuleContext<schemaParser::Entity_declarationContext>(i);
}


size_t schemaParser::LanguageContext::getRuleIndex() const {
  return schemaParser::RuleLanguage;
}

void schemaParser::LanguageContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLanguage(this);
}

void schemaParser::LanguageContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLanguage(this);
}


std::any schemaParser::LanguageContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitLanguage(this);
  else
    return visitor->visitChildren(this);
}

schemaParser::LanguageContext* schemaParser::language() {
  LanguageContext *_localctx = _tracker.createInstance<LanguageContext>(_ctx, getState());
  enterRule(_localctx, 0, schemaParser::RuleLanguage);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(19);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == schemaParser::WORD) {
      setState(16);
      entity_declaration();
      setState(21);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

schemaParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t schemaParser::TypeContext::getRuleIndex() const {
  return schemaParser::RuleType;
}

void schemaParser::TypeContext::copyFrom(TypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- T_stringContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::T_stringContext::String() {
  return getToken(schemaParser::String, 0);
}

schemaParser::T_stringContext::T_stringContext(TypeContext *ctx) { copyFrom(ctx); }

void schemaParser::T_stringContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterT_string(this);
}
void schemaParser::T_stringContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitT_string(this);
}

std::any schemaParser::T_stringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitT_string(this);
  else
    return visitor->visitChildren(this);
}
//----------------- T_doubleContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::T_doubleContext::Double() {
  return getToken(schemaParser::Double, 0);
}

schemaParser::T_doubleContext::T_doubleContext(TypeContext *ctx) { copyFrom(ctx); }

void schemaParser::T_doubleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterT_double(this);
}
void schemaParser::T_doubleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitT_double(this);
}

std::any schemaParser::T_doubleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitT_double(this);
  else
    return visitor->visitChildren(this);
}
//----------------- T_uintContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::T_uintContext::UInt() {
  return getToken(schemaParser::UInt, 0);
}

schemaParser::T_uintContext::T_uintContext(TypeContext *ctx) { copyFrom(ctx); }

void schemaParser::T_uintContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterT_uint(this);
}
void schemaParser::T_uintContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitT_uint(this);
}

std::any schemaParser::T_uintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitT_uint(this);
  else
    return visitor->visitChildren(this);
}
//----------------- T_intContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::T_intContext::Int() {
  return getToken(schemaParser::Int, 0);
}

schemaParser::T_intContext::T_intContext(TypeContext *ctx) { copyFrom(ctx); }

void schemaParser::T_intContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterT_int(this);
}
void schemaParser::T_intContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitT_int(this);
}

std::any schemaParser::T_intContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitT_int(this);
  else
    return visitor->visitChildren(this);
}
schemaParser::TypeContext* schemaParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 2, schemaParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(26);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case schemaParser::String: {
        _localctx = _tracker.createInstance<schemaParser::T_stringContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(22);
        match(schemaParser::String);
        break;
      }

      case schemaParser::UInt: {
        _localctx = _tracker.createInstance<schemaParser::T_uintContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(23);
        match(schemaParser::UInt);
        break;
      }

      case schemaParser::Int: {
        _localctx = _tracker.createInstance<schemaParser::T_intContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(24);
        match(schemaParser::Int);
        break;
      }

      case schemaParser::Double: {
        _localctx = _tracker.createInstance<schemaParser::T_doubleContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(25);
        match(schemaParser::Double);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Entity_declarationContext ------------------------------------------------------------------

schemaParser::Entity_declarationContext::Entity_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* schemaParser::Entity_declarationContext::TYPE_SEP() {
  return getToken(schemaParser::TYPE_SEP, 0);
}

schemaParser::Local_entity_declarationContext* schemaParser::Entity_declarationContext::local_entity_declaration() {
  return getRuleContext<schemaParser::Local_entity_declarationContext>(0);
}

schemaParser::FileContext* schemaParser::Entity_declarationContext::file() {
  return getRuleContext<schemaParser::FileContext>(0);
}

tree::TerminalNode* schemaParser::Entity_declarationContext::WORD() {
  return getToken(schemaParser::WORD, 0);
}


size_t schemaParser::Entity_declarationContext::getRuleIndex() const {
  return schemaParser::RuleEntity_declaration;
}

void schemaParser::Entity_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEntity_declaration(this);
}

void schemaParser::Entity_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEntity_declaration(this);
}


std::any schemaParser::Entity_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitEntity_declaration(this);
  else
    return visitor->visitChildren(this);
}

schemaParser::Entity_declarationContext* schemaParser::entity_declaration() {
  Entity_declarationContext *_localctx = _tracker.createInstance<Entity_declarationContext>(_ctx, getState());
  enterRule(_localctx, 4, schemaParser::RuleEntity_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(28);
    antlrcpp::downCast<Entity_declarationContext *>(_localctx)->namespace_ = match(schemaParser::WORD);
    setState(29);
    match(schemaParser::TYPE_SEP);
    setState(30);
    local_entity_declaration();
    setState(31);
    file();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Local_entity_declarationContext ------------------------------------------------------------------

schemaParser::Local_entity_declarationContext::Local_entity_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* schemaParser::Local_entity_declarationContext::LPAR() {
  return getToken(schemaParser::LPAR, 0);
}

std::vector<schemaParser::FieldContext *> schemaParser::Local_entity_declarationContext::field() {
  return getRuleContexts<schemaParser::FieldContext>();
}

schemaParser::FieldContext* schemaParser::Local_entity_declarationContext::field(size_t i) {
  return getRuleContext<schemaParser::FieldContext>(i);
}

tree::TerminalNode* schemaParser::Local_entity_declarationContext::RPAR() {
  return getToken(schemaParser::RPAR, 0);
}

tree::TerminalNode* schemaParser::Local_entity_declarationContext::WORD() {
  return getToken(schemaParser::WORD, 0);
}

std::vector<tree::TerminalNode *> schemaParser::Local_entity_declarationContext::COMMA() {
  return getTokens(schemaParser::COMMA);
}

tree::TerminalNode* schemaParser::Local_entity_declarationContext::COMMA(size_t i) {
  return getToken(schemaParser::COMMA, i);
}


size_t schemaParser::Local_entity_declarationContext::getRuleIndex() const {
  return schemaParser::RuleLocal_entity_declaration;
}

void schemaParser::Local_entity_declarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocal_entity_declaration(this);
}

void schemaParser::Local_entity_declarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocal_entity_declaration(this);
}


std::any schemaParser::Local_entity_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitLocal_entity_declaration(this);
  else
    return visitor->visitChildren(this);
}

schemaParser::Local_entity_declarationContext* schemaParser::local_entity_declaration() {
  Local_entity_declarationContext *_localctx = _tracker.createInstance<Local_entity_declarationContext>(_ctx, getState());
  enterRule(_localctx, 6, schemaParser::RuleLocal_entity_declaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(33);
    antlrcpp::downCast<Local_entity_declarationContext *>(_localctx)->entity = match(schemaParser::WORD);
    setState(34);
    match(schemaParser::LPAR);
    setState(40);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(35);
        field();
        setState(36);
        match(schemaParser::COMMA); 
      }
      setState(42);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(43);
    field();
    setState(44);
    match(schemaParser::RPAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FieldContext ------------------------------------------------------------------

schemaParser::FieldContext::FieldContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t schemaParser::FieldContext::getRuleIndex() const {
  return schemaParser::RuleField;
}

void schemaParser::FieldContext::copyFrom(FieldContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Native_fieldContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::Native_fieldContext::OFTYPE() {
  return getToken(schemaParser::OFTYPE, 0);
}

schemaParser::TypeContext* schemaParser::Native_fieldContext::type() {
  return getRuleContext<schemaParser::TypeContext>(0);
}

tree::TerminalNode* schemaParser::Native_fieldContext::WORD() {
  return getToken(schemaParser::WORD, 0);
}

tree::TerminalNode* schemaParser::Native_fieldContext::STAR() {
  return getToken(schemaParser::STAR, 0);
}

tree::TerminalNode* schemaParser::Native_fieldContext::SCORE() {
  return getToken(schemaParser::SCORE, 0);
}

tree::TerminalNode* schemaParser::Native_fieldContext::MAP() {
  return getToken(schemaParser::MAP, 0);
}

tree::TerminalNode* schemaParser::Native_fieldContext::TAG() {
  return getToken(schemaParser::TAG, 0);
}

tree::TerminalNode* schemaParser::Native_fieldContext::PROPERTY() {
  return getToken(schemaParser::PROPERTY, 0);
}

tree::TerminalNode* schemaParser::Native_fieldContext::EscapedString() {
  return getToken(schemaParser::EscapedString, 0);
}

schemaParser::Native_fieldContext::Native_fieldContext(FieldContext *ctx) { copyFrom(ctx); }

void schemaParser::Native_fieldContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNative_field(this);
}
void schemaParser::Native_fieldContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNative_field(this);
}

std::any schemaParser::Native_fieldContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitNative_field(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Multi_nested_entityContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::Multi_nested_entityContext::EQ() {
  return getToken(schemaParser::EQ, 0);
}

tree::TerminalNode* schemaParser::Multi_nested_entityContext::MULTI() {
  return getToken(schemaParser::MULTI, 0);
}

schemaParser::Local_entity_declarationContext* schemaParser::Multi_nested_entityContext::local_entity_declaration() {
  return getRuleContext<schemaParser::Local_entity_declarationContext>(0);
}

tree::TerminalNode* schemaParser::Multi_nested_entityContext::WORD() {
  return getToken(schemaParser::WORD, 0);
}

tree::TerminalNode* schemaParser::Multi_nested_entityContext::STAR() {
  return getToken(schemaParser::STAR, 0);
}

tree::TerminalNode* schemaParser::Multi_nested_entityContext::MAP() {
  return getToken(schemaParser::MAP, 0);
}

tree::TerminalNode* schemaParser::Multi_nested_entityContext::EscapedString() {
  return getToken(schemaParser::EscapedString, 0);
}

schemaParser::Multi_nested_entityContext::Multi_nested_entityContext(FieldContext *ctx) { copyFrom(ctx); }

void schemaParser::Multi_nested_entityContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMulti_nested_entity(this);
}
void schemaParser::Multi_nested_entityContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMulti_nested_entity(this);
}

std::any schemaParser::Multi_nested_entityContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitMulti_nested_entity(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Local_nested_entityContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::Local_nested_entityContext::EQ() {
  return getToken(schemaParser::EQ, 0);
}

schemaParser::Local_entity_declarationContext* schemaParser::Local_nested_entityContext::local_entity_declaration() {
  return getRuleContext<schemaParser::Local_entity_declarationContext>(0);
}

tree::TerminalNode* schemaParser::Local_nested_entityContext::WORD() {
  return getToken(schemaParser::WORD, 0);
}

tree::TerminalNode* schemaParser::Local_nested_entityContext::STAR() {
  return getToken(schemaParser::STAR, 0);
}

tree::TerminalNode* schemaParser::Local_nested_entityContext::MAP() {
  return getToken(schemaParser::MAP, 0);
}

tree::TerminalNode* schemaParser::Local_nested_entityContext::EscapedString() {
  return getToken(schemaParser::EscapedString, 0);
}

schemaParser::Local_nested_entityContext::Local_nested_entityContext(FieldContext *ctx) { copyFrom(ctx); }

void schemaParser::Local_nested_entityContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocal_nested_entity(this);
}
void schemaParser::Local_nested_entityContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocal_nested_entity(this);
}

std::any schemaParser::Local_nested_entityContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitLocal_nested_entity(this);
  else
    return visitor->visitChildren(this);
}
//----------------- External_referenceContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::External_referenceContext::EQ() {
  return getToken(schemaParser::EQ, 0);
}

schemaParser::Name_declarContext* schemaParser::External_referenceContext::name_declar() {
  return getRuleContext<schemaParser::Name_declarContext>(0);
}

tree::TerminalNode* schemaParser::External_referenceContext::DOT() {
  return getToken(schemaParser::DOT, 0);
}

std::vector<tree::TerminalNode *> schemaParser::External_referenceContext::WORD() {
  return getTokens(schemaParser::WORD);
}

tree::TerminalNode* schemaParser::External_referenceContext::WORD(size_t i) {
  return getToken(schemaParser::WORD, i);
}

tree::TerminalNode* schemaParser::External_referenceContext::STAR() {
  return getToken(schemaParser::STAR, 0);
}

tree::TerminalNode* schemaParser::External_referenceContext::MAP() {
  return getToken(schemaParser::MAP, 0);
}

tree::TerminalNode* schemaParser::External_referenceContext::TAG() {
  return getToken(schemaParser::TAG, 0);
}

tree::TerminalNode* schemaParser::External_referenceContext::PROPERTY() {
  return getToken(schemaParser::PROPERTY, 0);
}

tree::TerminalNode* schemaParser::External_referenceContext::EscapedString() {
  return getToken(schemaParser::EscapedString, 0);
}

schemaParser::External_referenceContext::External_referenceContext(FieldContext *ctx) { copyFrom(ctx); }

void schemaParser::External_referenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExternal_reference(this);
}
void schemaParser::External_referenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExternal_reference(this);
}

std::any schemaParser::External_referenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitExternal_reference(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Local_nested_entity_listContext ------------------------------------------------------------------

tree::TerminalNode* schemaParser::Local_nested_entity_listContext::EQ() {
  return getToken(schemaParser::EQ, 0);
}

tree::TerminalNode* schemaParser::Local_nested_entity_listContext::LCOLL() {
  return getToken(schemaParser::LCOLL, 0);
}

schemaParser::Local_entity_declarationContext* schemaParser::Local_nested_entity_listContext::local_entity_declaration() {
  return getRuleContext<schemaParser::Local_entity_declarationContext>(0);
}

tree::TerminalNode* schemaParser::Local_nested_entity_listContext::RCOLL() {
  return getToken(schemaParser::RCOLL, 0);
}

tree::TerminalNode* schemaParser::Local_nested_entity_listContext::WORD() {
  return getToken(schemaParser::WORD, 0);
}

tree::TerminalNode* schemaParser::Local_nested_entity_listContext::STAR() {
  return getToken(schemaParser::STAR, 0);
}

tree::TerminalNode* schemaParser::Local_nested_entity_listContext::MAP() {
  return getToken(schemaParser::MAP, 0);
}

tree::TerminalNode* schemaParser::Local_nested_entity_listContext::EscapedString() {
  return getToken(schemaParser::EscapedString, 0);
}

schemaParser::Local_nested_entity_listContext::Local_nested_entity_listContext(FieldContext *ctx) { copyFrom(ctx); }

void schemaParser::Local_nested_entity_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocal_nested_entity_list(this);
}
void schemaParser::Local_nested_entity_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<schemaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocal_nested_entity_list(this);
}

std::any schemaParser::Local_nested_entity_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<schemaVisitor*>(visitor))
    return parserVisitor->visitLocal_nested_entity_list(this);
  else
    return visitor->visitChildren(this);
}
schemaParser::FieldContext* schemaParser::field() {
  FieldContext *_localctx = _tracker.createInstance<FieldContext>(_ctx, getState());
  enterRule(_localctx, 8, schemaParser::RuleField);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(112);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<schemaParser::Native_fieldContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(47);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == schemaParser::STAR) {
        setState(46);
        match(schemaParser::STAR);
      }
      setState(50);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == schemaParser::TAG

      || _la == schemaParser::PROPERTY) {
        setState(49);
        _la = _input->LA(1);
        if (!(_la == schemaParser::TAG

        || _la == schemaParser::PROPERTY)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(53);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == schemaParser::SCORE) {
        setState(52);
        match(schemaParser::SCORE);
      }
      setState(55);
      antlrcpp::downCast<Native_fieldContext *>(_localctx)->name = match(schemaParser::WORD);
      setState(58);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == schemaParser::MAP) {
        setState(56);
        match(schemaParser::MAP);
        setState(57);
        antlrcpp::downCast<Native_fieldContext *>(_localctx)->map = match(schemaParser::EscapedString);
      }
      setState(60);
      match(schemaParser::OFTYPE);
      setState(61);
      type();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<schemaParser::External_referenceContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(63);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == schemaParser::STAR) {
        setState(62);
        match(schemaParser::STAR);
      }
      setState(66);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == schemaParser::TAG

      || _la == schemaParser::PROPERTY) {
        setState(65);
        _la = _input->LA(1);
        if (!(_la == schemaParser::TAG

        || _la == schemaParser::PROPERTY)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
      }
      setState(68);
      antlrcpp::downCast<External_referenceContext *>(_localctx)->name = match(schemaParser::WORD);
      setState(71);
      _errHandler->sync(this);
